add the paragraph

--- a/DailyLacture/index.html
+++ b/DailyLacture/index.html
@@ -29,6 +29,7 @@
             <option>select</option>
             <option>Male</option>
             <option>Female</option>
+            <p>change file</p>
         </select>
         <br>
         <label for="age" >Address</label>
